--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@emmetio/css-abbreviation",
   "version": "0.1.0",
-  "description": "Prepares Emmet abbreviation for CSS output",
-  "main": "dist/css-snippets-resolver.cjs.js",
-  "module": "dist/css-snippets-resolver.es.js",
+  "description": "Parses Emmet CSS abbreviatoin into AST tree",
+  "main": "dist/css-abbreviation.cjs.js",
+  "module": "dist/css-abbreviation.es.js",
   "scripts": {
     "test": "mocha",
     "build": "rollup -c",
