--- a/package.json
+++ b/package.json
@@ -22,10 +22,15 @@
   "homepage": "https://github.com/emmetio/css-transform#readme",
   "dependencies": {
     "@emmetio/node": "^0.1.0",
-    "@emmetio/stream-reader": "^1.0.0",
+    "@emmetio/stream-reader": "^1.0.0"
+  },
+  "devDependencies": {
     "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
     "babel-register": "^6.18.0",
     "mocha": "^3.2.0",
     "rollup": "^0.41.4"
+  },
+  "directories": {
+    "test": "test"
   }
 }
