Switched to new Stream Reader

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "homepage": "https://github.com/emmetio/css-transform#readme",
   "dependencies": {
     "@emmetio/node": "^0.1.0",
-    "@emmetio/stream-reader": "^1.0.0"
+    "@emmetio/stream-reader": "^2.0.0",
+    "@emmetio/stream-reader-utils": "^0.1.0"
   },
   "devDependencies": {
     "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
